started skaffold setup for vertx app